#          add release hytec8413-R1-1-2
#        29-Aug-2007, K. Luchini         (LUCHINI):
#          add release hytec8413-R1-1-1
#        02-Jul-2007, K. Luchini         (LUCHINI):
#          add release hytec8413-R1-1-0
#
#==============================================================
#
hytec8413-R2-2-2: 12-Dec-2011, Ernesto
                  Remove Dependency of ip231: should not be included for 
                  driver tests.

hytec8413-R2-2-1: 07-Sep-2011, K. Luchini (LUCHINI):
                  Upgrade ipac  from ipac-R2-8-lcls7 to ipac-R2-11-lcls1
                  Upgrade ip231 from ip231-R2-2-0    to ip231-R2-2-1

hytec8413-R2-2-0: Build with base-R3-14-9-lcls6 (RTEMS 4.9.4)

hytec8413-R2-1-0: Build with base-R3-14-9-lcls5 (RTEMS 4.9.3)

hytec8413-R2-0-0: Build with base-R3-14-9-lcls3 (RTEMS 4.9.1)

hytec8413-R1-1-5-1: Build with base-R3-14-9-lcls1 (RTEMS 4.7.1)
                    Replace CONFIG_APP with CONFIG_SITE
                    Add RELEASE_SITE

hytec8413-R1-1-5:Backout epics  base-R3-14-8-lcls2 (RTEMS 4.7.1)
                 Build with ipac-R2-8-lcls3
                 Add sam mode setup, new firmware bits in acr.
                 Add more layers of directories.

hytec8413-R1-1-4:Build with base-R3-14-9-lcls1 (RTEMS 4.7.1)
                 Build with extensions-R3-14-9
                 Build with ipac-R2-8-lcls2

hytec8413-R1-1-3:Build with base-R3-14-8-lcls2 (RTEMS 4.7.1)
                 Build with ipac-R1-0-3
                 Build with ipac-R2-8-lcls1

hytec8413-R1-1-2:Build with ipac-R1-0-2 instead of ipac-R1-0-1

hytec8413-R1-1-1:Build with ipac-R1-0-1 instead of ipac-R1-0-0

hytec8413-R1-1-0:Build with ipac-R1-0-0 instead of ipac/Devl

hytec8413-R1-1:  Add calibration and more device support.

hytec8413-R1-0:  Modify configure/RELEASE to use new build area

hytec8413-R0-0:  Initial entry created to support LCLS and 
                 currently running the the injector and BC1
                 phase of the project.