@@ -29,6 +29,9 @@
 #include "epicsVersion.h"
 #include "epicsMutex.h"
 #include "epicsString.h"
+#if (EPICS_REVISION == 14 && EPICS_MODIFICATION >= 11)
+#include  "errlog.h"
+#endif
 #include "cantProceed.h"
 #include "boRecord.h"         /* struct boRecord           */
 #include "alarm.h"            /* WRITE_ALARM,INVALID_ALARM */    
