@@ -34,7 +34,8 @@
 #
 hytec8413-R2-2-2: 12-Dec-2011, Ernesto
                   Remove Dependency of ip231: should not be included for 
-                  driver tests.
+                  driver tests. Also changes to source to include errlog.h
+                  for EPICS R3-14-12; also include ellLib.h for EPICS R3-14-12
 
 hytec8413-R2-2-1: 07-Sep-2011, K. Luchini (LUCHINI):
                   Upgrade ipac  from ipac-R2-8-lcls7 to ipac-R2-11-lcls1
